# duckdb-compression

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  build.yml
src/: bzip_filehandle.cpp  bzip_filesystem.cpp  compression_extension.cpp  compression_filesystem.cpp  lz4_filesystem.cpp  lzma_filehandle.cpp  lzma_filesystem.cpp
src/include/: bzip_filehandle.hpp  bzip_filesystem.hpp  compression_extension.hpp  compression_filesystem.hpp  lz4_filesystem.hpp  lzma_filehandle.hpp  lzma_filesystem.hpp
test/files/: output.csv.bz2  output.csv.lz4  output.csv.lzma
test/sql/: bz2.test  lz4.test  lzma.test
